# git-repo-manager

./: package.json  tailwind.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  utils.rs
src-tauri/src/database/: index.rs  mod.rs
src-tauri/src/database/module/: mod.rs  repo_info.rs
src-tauri/src/service/: config.rs  history_workspace.rs  mod.rs  repo_manage.rs  workspace.rs
src/components/: MainView.tsx  RepoSelection.tsx  Sidebar.tsx  Toolbar.tsx
src/sidebars/: FileList.tsx
src/store/: repository.ts
src/styles/: global.css
src/types/: repo.type.ts
